# high-performance-python-2e-ja

./: .gitmodules
workbench/: .tool-versions  pyproject.toml
workbench/02_profiling/: julia1.py  julia1_lineprofiler.py  julia1_lineprofiler.py.lprof  julia1_lineprofiler3.py.lprof  profile.stats
workbench/07_compailing/julia/: julia1.py
workbench/07_compailing/julia/cython/cython/: Makefile  cythonfn.pyx  cythonfn1.c  cythonfn1.html  cythonfn2.c  cythonfn2.html  cythonfn2.pyx  cythonfn3.c  cythonfn3.html  cythonfn3.pyx  cythonfn4.c  cythonfn4.html  cythonfn4.pyx  cythonfn5.c  cythonfn5.pyx  cythonfn6.c  cythonfn6.pyx  julia1.py  main.py  pure_python_fn.py  setup.py  setup5.py  setup6.py
workbench/libs/: __init__.py  julia.py  profile.py
