[project]
dependencies = [
  "line-profiler~=4.2.0",
  "Pillow~=11.0.0",
  "scipy~=1.14.1",
  "scikit-learn~=1.6.0",
  "pandas~=2.1.0",
  "matplotlib~=3.10.0",
  "numba~=0.60.0",
  "numexpr~=2.10.2",
  "tqdm~=4.67.1",
  "torch~=2.5.1",
  "Cython~=3.0.11",
  "gevent~=24.11.1",
  "requests~=2.32.3",
  "aiohttp~=3.11.10",
  "tornado~=6.2",
  "bcrypt~=4.2.1",
  "uvloop~=0.21.0",
  "fasteners~=0.18",
  "redis~=5.2.1",
  "prettytable~=3.12.0",
  "ipyparallel~=9.0.0",
  "pynsq~=0.9.1",
  "gensim~=4.3.0",
  "memory-profiler~=0.61.0",
  "DAWG-Python~=0.7.2",
  "marisa-trie~=1.2.1",
  "bitarray~=3.0.0",
  "mmh3~=5.0.1",
  "loguru~=0.7.3",
]
name = "workbench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"

[dependency-groups]
dev = ["taskipy>=1.10.3"]
lint = ["ruff>=0.8.3"]


[tool.mypy]
python_version = "3.10"
disable_error_code = ["assignment", "no-redef"]
